trying to fix issues on mobile

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -17,4 +17,8 @@ nav{
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
+  /*Small screens*/
+  @media screen and (max-width: $smallscreen) {
+    font-size: 200%;
+  }
 }
